<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/seonjk"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="107dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toStartOf="@+id/nameRslt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/noImage"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_subdirectory_arrow_right_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <Button
        android:id="@+id/nameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="@+id/ageBtn"
        app:layout_constraintStart_toStartOf="@+id/ageBtn"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/nameRslt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="107dp"
        app:layout_constraintBottom_toTopOf="@+id/ageRslt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="33dp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toStartOf="@+id/ageRslt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameBtn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/noImage"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_subdirectory_arrow_right_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <Button
        android:id="@+id/ageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="18dp"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="@+id/ageText"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <TextView
        android:id="@+id/ageRslt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toTopOf="@+id/hobbyRslt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ageText"
        app:layout_constraintTop_toBottomOf="@+id/nameRslt" />

    <TextView
        android:id="@+id/hobbyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/hobby"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageBtn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/noImage"
        android:layout_marginEnd="184dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_subdirectory_arrow_right_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/hobbyRslt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbyText" />

    <Button
        android:id="@+id/hobbyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="@+id/ageBtn"
        app:layout_constraintStart_toStartOf="@+id/ageBtn"
        app:layout_constraintTop_toBottomOf="@+id/hobbyText" />

    <TextView
        android:id="@+id/hobbyRslt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/ageRslt" />

</android.support.constraint.ConstraintLayout>